cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME CPP_LRU_Cache)
project(${PROJECT_NAME})
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# SET CXX VERSION
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# SET THE SOURCE FILE
set(SOURCES "src/main.cpp")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY out)

# SET THE EXECUTABLE TO THE SOURCE AND LINK LIBRARIES
add_executable(CPP_LRU_Cache ${SOURCES})